# acs-labs

./: README.md
lab1_benchmarking/: CMakeLists.txt  README.md  numbers_generator.py  output.txt  script.py
lab1_benchmarking/data/: output1.txt  output1_old.txt  output2.txt  output2_old.txt  output3.txt  output3_old.txt
lab1_benchmarking/inc/: fileio.h  measurements.h  methods.h
lab1_benchmarking/src/: fileio.cpp  main.cpp  methods.cpp
lab2_integral/: CMakeLists.txt  README.md  config.txt  output.txt  script.py
lab2_integral/data/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
lab2_integral/inc/: integrals.h  tests.h  time_measurements.h
lab2_integral/src/: integrals.cpp  main.cpp  tests.cpp
lab3_text_processing_1/: CMakeLists.txt  README.md  graph.py  script.py
lab3_text_processing_1/inc/: config.h  files.h  processing.h
lab3_text_processing_1/src/: config.cpp  files.cpp  main.cpp  processing.cpp
lab4_text_processing_2/: CMakeLists.txt  README.md  graph.py
lab4_text_processing_2/inc/: config.h  files.h  processing.h  time_measurements.h
lab4_text_processing_2/src/: files.cpp  main.cpp  processing.cpp
lab5_text_processing_3/: CMakeLists.txt  README.md  graph.py  script.py
lab5_text_processing_3/inc/: files.h  processing.h  safe_queue.h
lab5_text_processing_3/src/: config.cpp  files.cpp  main.cpp  processing.cpp
lab6_text_processing_4/: CMakeLists.txt  README.md  graph.py  script.py
lab6_text_processing_4/cmake/: Config.cmake
lab6_text_processing_4/inc/: config.h  indexer.h  merger.h  processing.h  recursive_reader.h  types.h
lab6_text_processing_4/src/: config.cpp  indexer.cpp  main.cpp  merger_t.cpp  processing.cpp  recursive_reader.cpp
lab7_mpi/: CMakeLists.txt  README.md  generate_heatmap.py  heatmap1000.txt  script.gp
lab7_mpi/inc/: TwoDimArray.h  mpi_modules.h  temperatures.h
lab7_mpi/src/: TwoDimArray.cpp  main.cpp  mpi_modules.cpp  temperatures.cpp
